<resources>
    <string name="app_name">Questionarios</string>
    <string name="hint_username">nome do usuario</string>
    <string name="hint_password">senha</string>
    <string name="button_login">Entrar</string>
    <string name="login_invalid">\"Nome de Usuario ou Senha invalidos\"</string>
    <string name="upload_ok">\"Questao cadastrada com sucesso!\"</string>
    <string name="hint_question">Digite aqui uma questao</string>
    <string name="button_register">Cadastrar</string>
    <string name="question_1">Questao 1:</string>
    <string name="text_question1">Java possui passagem por referencia?</string>
    <string name="hint_answer">Escreva aqui sua resposta.</string>
    <string name="send">Enviar</string>
    <string name="answer_send">Resposta enviada!</string>
    <string name="back">Voltar</string>
</resources>
